[tool.poetry]
name = "file_search"
version = "0.1.0"
description = "This is a proof of concept for a file search. I have adapted a previous code from a dotm search string project to work on this project."
authors = ["Mustafa Prodhan <mustafa.prodhan.317@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
